Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-29668

SUPER should not allow actions that have fine-grained dedicated privileges

    XMLWordPrintable

Details

    Description

      After MDEV-21743 the SUPER privilege was split into many fine-grained privileges. But still, according to MDEV-21743

      The SUPER privilege as such should still remain as an alias for all these smaller privileges

      For example, to set a binlog format one needs either BINLOG ADMIN or SUPER privilege.

      This task is about removing SUPER privilege check from all these actions that have a dedicated privilege. For example, one will need to have BINLOG ADMIN to change the binlog format, SUPER will not be sufficient anymore.

      When upgrading from an older version everyone having SUPER should automatically get (for example) BINLOG ADMIN.

      See how it was done in MDEV-29596

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              serg Sergei Golubchik
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 4.75d
                  4.75d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.